--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=delivery-configuration
+server.port=8888
+
+spring.cloud.config.server.git.uri=https://github.com/KyryloBulyk/delivery-config-repo
+spring.cloud.config.server.git.clone-on-start=true
