--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/KyryloBulyk/delivery-config-repo
 spring.cloud.config.server.git.clone-on-start=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
